# rustmd3view

./: .gitignore  Cargo.toml  README.md
assets/: axes.blend  axes.blend1  axes_sprites.xcf  md3.frag  md3.vert  null.xcf  res.frag  res.vert  shader.frag  shader.vert
gl-macros/: Cargo.toml
gl-macros/src/: lib.rs
md3view/: Cargo.toml  build.rs
md3view/assets/: axes_sprites.xcf  md3.vert  res.frag
md3view/src/: err_util.rs  eye.rs  main.rs  md3.rs  render.rs  res.rs  str_util.rs
src/: err_util.rs  eutil.rs  eye.rs  main.rs  md3.rs  render.rs  res.rs  window.rs
src/render/: macros.rs  mod.rs
