[package]
name = "rustmd3view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
bytemuck = "1.12.2"
glutin = "0.29.1"
glow = "0.11.2"
glam = {version = "0.22.0", features=["bytemuck"]}
thiserror = "1.0.37"
anyhow = {version = "1.0.66", features=["backtrace"]}
egui = "0.19.0"
egui_file = "0.3.1"
egui_glow = {version = "0.19.0", features=["winit"]}
image = "0.24.4"
once_cell = "1.16.0"
rayon = "1.6.1"

[features]
default = []
extra_logging = ["log_drop_gl_resources"]
log_drop_gl_resources = []
make_animation_is_bugged = []
